--- a/doc/extsimod.tex
+++ b/doc/extsimod.tex
@@ -485,7 +485,9 @@ is usually assumed to be of the general form
 -I_d {\rm Hxc}(4) ...$.
 \item the natural logarithm of the partition sum Z should be calculated and returned as lnZ,
 $Z=\sum_i e^{-E_i/kT}$
-\item the magnetic energy U should be calculated and returned as U, $U=\sum_i E_i e^{-E_i/kT}/Z$
+\item the magnetic energy U should be calculated and returned as U, $U=\sum_i p_i=\sum_i E_i e^{-E_i/kT}/Z$
+\item if $T<0$ all quantities should be evaluated assuming that all Boltzmann probabilities $p_i$
+ are zero except for the state number $n=(-T)$, for which the probability $p_n=1$.
 \end{enumerate}
 
 ... as an example the anisotropic doublet function is given as a
@@ -609,7 +611,7 @@ on input
 on output
    int             total number of transitions
    delta           transition energy [meV]
-   u1             vector u1=<-|Ialpha-<Ialpha>|+>sqrt((n- - n+))                          
+   u1             vector u1=<-|Ialpha-<Ialpha>|+>sqrt((p- - p+))                          
                 note that as in Icalc the single ion momentum vector <-|I|+> 
 				(n- dimensional with n>=1)
                 may be an arbitrary set of operators
@@ -643,6 +645,8 @@ the expression (\ref{mmatrix}) would be zero because $(p_--p_+)$ vanishes.
 In this case the single ion module should calculate $(p_+/kT)$ instead of $(p_--p_+)$.
 \item if transition is from a level to itself, then a negative 
 value of $\Delta=-10^{-10}$ should be returned.
+\item if $T<0$ all quantities should be evaluated assuming that all Boltzmann probabilities $p_i$
+ are zero except for the state number $n=(-T)$, for which the probability $p_n=1$.
 \end{enumerate}
 
 %*************************************************************************************
@@ -679,8 +683,8 @@ extern "C" __declspec(dllexport) void estates(
 #endif
 // on output
                      ComplexMatrix * ests,    // eigenstate matrix      
-                                              // it should/may also contain population 
-                                              // numbers of the states (imaginary part of row 0)
+                                              // it must also contain population 
+                                              // numbers p_i of the states (imaginary part of row 0)
                                               // and eigenvalues (real part of row 0)
 // on input
                       Hxc ,                 //   vector of exchange field [meV] (can be n-dimensional, for a set of n operators)
@@ -692,17 +696,23 @@ extern "C" __declspec(dllexport) void estates(
                       char **sipffilename)// Single ion properties filename                      
 { // ... some code to compute eigenvectors and eigenvalues
 
-// dimension matrix
-(*ests)=ComplexMatrix(0,nofrows,1,nofcols);
+ dj=21;  // dimension matrix according to the  dimension of your eigenvalue problem
+   (*ests) = ComplexMatrix(0,dj,1,dj);
+   Vector En(1,dj),pn(1,dj);Matrix zr(1,dj,1,dj);Matrix zi(1,dj,1,dj);
+   setup_and_solve_Hamiltonian(Hxc,Hext,En,zr,zi,sort); // call some function to solve your Hamiltonian
+   
+   for(i=1;i<=dj;++i)for(j=1;j<=dj;++j)(*ests)(i,j)=complex <double> (zr(i,j),zi(i,j));   // fill matrix with eigenstates
+ 
+    //calculate partition sum and Boltzmann probabilities pn
+    double zz;calculate_Z_pn(En,T,zz,pn);
 
-// fill matrix with values
-int l,m;
-          for(l=1;l<=nofrows;++l)for(m=1;m<=nofcols;++m)
-          {(*ests)(l,m)=complex <double> ( 4 , 2);}
-                                           // instead of 4 and 2 put the real 
-										   //and imaginary parts to be stored
+     // put Energies and Boltzmann population into row 0 of eigenstates...
+     for(j=1;j<=dj;++j){(*eigenstates)(0,j)=complex<double>(En(j),pn(j));}
+
 }
 \end{verbatim}
+Note: if $T<0$ all quantities should be evaluated assuming that all Boltzmann probabilities $p_i$
+ are zero except for the state number $n=(-T)$, for which the probability $p_n=1$.
 }
 
 
@@ -766,6 +776,8 @@ Lande factor as gJ and  can be used for this purpose. The Hamiltonian
 is usually assumed to be of the general form
  $H=H_0- \mbf M \mbf H_ext - I_a {\rm Hxc}(1) -I_b {\rm Hxc}(2) -I_c {\rm Hxc}(3) 
 -I_d {\rm Hxc}(4) ...$.
+\item if $T<0$ all quantities should be evaluated assuming that all Boltzmann probabilities $p_i$
+ are zero except for the state number $n=(-T)$, for which the probability $p_n=1$.
 \end{enumerate}
 
 Thus the function resembles closely Icalc, however no U and lnZ are calculated and
@@ -835,6 +847,8 @@ If the energy of this transition
 is zero, i.e. $\Delta(tn)=0$ (diffuse scattering), 
 the expression (\ref{mmatrix}) would be zero because $(p_--p_+)$ vanishes.
 In this case the single ion module should calculate $(p_+/kT)$ instead of $(p_--p_+)$.
+\item if $T<0$ all quantities should be evaluated assuming that all Boltzmann probabilities $p_i$
+ are zero except for the state number $n=(-T)$, for which the probability $p_n=1$.
 \end{enumerate}
 
 
@@ -1075,6 +1089,8 @@ is zero, i.e. $\Delta(tn)=0$ (diffuse scattering),
 the ${\mbf m^s_{\alpha1}}(\mbf Q)$ 
  would be zero because $(p_--p_+)$ vanishes (compare expression (\ref{mmatrix})).
 In this case the single ion module should calculate $(p_+/kT)$ instead of $(p_--p_+)$.
+\item if $T<0$ all quantities should be evaluated assuming that all Boltzmann probabilities $p_i$
+ are zero except for the state number $n=(-T)$, for which the probability $p_n=1$.
 \end{enumerate}
 
 %************************************************************************************************
@@ -1150,6 +1166,8 @@ is zero, i.e. $\Delta(tn)=0$ (diffuse scattering),
 the ${{\mbf r\mbf i\mbf x\mbf s}^s_{\alpha1}}(\mbf Q)$ 
  would be zero because $(p_--p_+)$ vanishes (compare expression (\ref{mmatrix})).
 In this case the single ion module should calculate $(p_+/kT)$ instead of $(p_--p_+)$.
+\item if $T<0$ all quantities should be evaluated assuming that all Boltzmann probabilities $p_i$
+ are zero except for the state number $n=(-T)$, for which the probability $p_n=1$.
 \end{enumerate}
 
 %*************************************************************************************
@@ -1178,6 +1196,8 @@ The module function must perform the following task:
       The output Vector cd(1,\dots,28) should contain  coefficients 
      (i.e. $\langle\sum_i Z_l^m (\Omega_i)\rangle$)
       in the following order (lm):  00, 2-2, 2-1,20,21,22, 4-4, 4-3,..,44,6-6,6-5 ...,65,66
+\item if $T<0$ all quantities should be evaluated assuming that all Boltzmann probabilities $p_i$
+ are zero except for the state number $n=(-T)$, for which the probability $p_n=1$.
 \end{enumerate}
 
 
@@ -1248,6 +1268,8 @@ The module function must perform the following tasks:
       the spin density vector $M^S_{x,y,z}=\sum_{l,m} a^{x,y,z}_{S,lm} Z_l^m R^2(r)$
       The output Vector alm(1,\dots,49) should contain  $a^{x,y,z}_{S,lm}$
       in the following order (lm):  00,1-1, 10,11, 2-2, 2-1,20,21,22, 3-3, 3-2, ...,65,66
+\item if $T<0$ all quantities should be evaluated assuming that all Boltzmann probabilities $p_i$
+ are zero except for the state number $n=(-T)$, for which the probability $p_n=1$.
 \end{enumerate}
 
 %*************************************************************************************
@@ -1319,6 +1341,8 @@ The module function must perform the following tasks:
       density vector $M^L_{x,y,z}=\sum_{l,m} a^{x,y,z}_{L,lm} Z_l^m F(r)$
       The output Vector alm(1,\dots,49) should contain  $a^{x,y,z}_{L,lm}$
       in the following order (lm):  00,1-1, 10,11, 2-2, 2-1,20,21,22, 3-3, 3-2, ...,65,66
+\item if $T<0$ all quantities should be evaluated assuming that all Boltzmann probabilities $p_i$
+ are zero except for the state number $n=(-T)$, for which the probability $p_n=1$.
 \end{enumerate}
 
 Note the definition of $F(r)$ in terms of the radial wave function $R(r)$ is
