displayhtml added displaytext extended by N Kluever

--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -506,8 +506,9 @@ display\index{display} of a 3 dimensional dataset as a colour and/or contour plo
 denote the x,y and z column in file {\prg ./results/mcdisp.dsigma.tot}, which should
 be plotted. Figure~\ref{ho2ti2o7diffuse} shows an sample output of this program.
 \item [\prg displaytext\index{displaytext} ./results/mcphas.hkl] monitors the file mcphas.hkl in %%@
-a text window
-on screen.
+a text window on screen.
+\item [\prg displayhtml\index{displayhtml} calc.bat.html] monitors the file calc.bat.html in 
+a text window on screen.
 \item [\prg expcol\index{expcol} col const file:] calculates exponent of a column exp(col) 
 \item [\prg factcol\index{factcol} col{[ecolerr]} const file:] multiplies col with a constant in file,
 a error colmn may be given and is also multiplied by the absvalue of the constant.
