--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -50,6 +50,7 @@ Duc Manh Le \thanks{Helmholtz-Zentrum Berlin f\"ur Materialien und Energie, Berl
 P. Fabi n\'e Hoffmann\thanks{Forschungszentrum J\"ulich, D-52425 J\"ulich, Germany},
 \and S. Rotter \thanks{Wien, Austria},
 \and M. Banks \thanks{Max Planck Institute, Stuttgart, Germany}
+\and N. Kl\"uver \thanks{Gymnasium Dresden-Cotta}
 }
 
 
